project(hlibcamsensor)
cmake_minimum_required(VERSION 2.8)

if (DEFINED CROSS_COMPILE)
    message("CROSS_COMPILE = ${CROSS_COMPILE}")
    set(CMAKE_C_COMPILER "${CROSS_COMPILE}gcc")
    set(CMAKE_VERBOSE_MAKEFILE on)
    #set(CMAKE_C_FLAGS "-Wall -Werror")
    set(CMAKE_C_FLAGS "-Wall")
endif()

if (PROC_DEBUG STREQUAL "Debug")
    set(CMAKE_BUILD_TYPE "Debug")
    set(CMAKE_C_FLAGS_DEBUG "-g")
else()
    set(CMAKE_C_FLAGS_RELEASE "-Os")
    set(CMAKE_BUILD_TYPE "Release")
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
if (COMP_V2500 STREQUAL "yes")
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/v2500)
else()
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/v2505)
endif()
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/c99 ${CMAKE_CURRENT_SOURCE_DIR}/include/felixcommon)


if (COMP_ALL_SENSORS STREQUAL "yes")
    if (COMP_V2500 STREQUAL "yes")
        aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sensors/v2500 CAMSENSOR_SRC)
    else()
        aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sensors/v2505 CAMSENSOR_SRC)
        add_definitions(-DSENSOR_IIFDG)
    endif()
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sensors CAMSENSOR_SRC)
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge CAMSENSOR_SRC)
    add_definitions(-DSENSOR_AR330_DVP -DSENSOR_AR330_MIPI -DSENSOR_IMX322_DVP -DSENSOR_IMX179_MIPI -DSENSOR_OV683_MIPI)
    add_definitions(-DSENSOR_OV2710 -DSENSOR_OV4689 -DSENSOR_SC2135_DVP -DSENSOR_SC1135_DVP -DSENSOR_SC3035_DVP -DSENSOR_CX9080_MIPI)
    add_definitions(-DSENSOR_OV4688, -DSENSOR_P401, -DSENSOR_STK3855_DVP, -DSENSOR_DUAL_BRIDGE, -DSENSOR_SC2235_DVP)
else ()
    if (IIFDG STREQUAL "yes")
        if (COMP_V2500 STREQUAL "no")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/v2505/iifdatagen.c)
        add_definitions(-DSENSOR_IIFDG)
        endif()
    endif()
    if (AR330_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/ar330dvp.c)
        add_definitions(-DSENSOR_AR330_DVP)
    endif()
    if (AR330_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/ar330mipi.c)
        add_definitions(-DSENSOR_AR330_MIPI)
    endif()
    if (IMX322_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/imx322dvp.c)
        add_definitions(-DSENSOR_IMX322_DVP)
    endif()
    if (IMX179_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/imx179mipi.c)
        add_definitions(-DSENSOR_IMX179_MIPI)
    endif()
    if (OV683_MIPI STREQUAL "yes")
        if (COMP_V2500 STREQUAL "yes")
            aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sensors/v2500 CAMSENSOR_SRC)
        else()
            aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sensors/v2505 CAMSENSOR_SRC)
        endif()
        add_definitions(-DSENSOR_OV683_MIPI)
    endif()
    if (OV2710_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/ov2710.c)
        add_definitions(-DSENSOR_OV2710)
    endif()
    if (OV4689 STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/ov4689.c)
        add_definitions(-DSENSOR_OV4689)
    endif()
    if (OV4688 STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/ov4689.c)
        add_definitions(-DSENSOR_OV4688)
    endif()
    if (P401 STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/p401.c)
        add_definitions(-DSENSOR_P401)
    endif()
    if (SC2135_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/sc2135dvp.c)
        add_definitions(-DSENSOR_SC2135_DVP)
    endif()
    if (SC2235_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/sc2235dvp.c)
        add_definitions(-DSENSOR_SC2235_DVP)
    endif()
    if (SC1135_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/sc1135dvp.c)
        add_definitions(-DSENSOR_SC1135_DVP)
    endif()
    if (SC3035_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/sc3035dvp.c)
        add_definitions(-DSENSOR_SC3035_DVP)
    endif()
    if (STK3855_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/stk3855dual720dvp.c)
        add_definitions(-DSENSOR_STK3855_DVP)
    endif()
    if (IMX291_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/imx291dvp.c)
        add_definitions(-DSENSOR_IMX291_DVP)
    endif()

    if (DUAL_BRIDGE STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/dual_bridge.c)
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/bridge_sensors.c)
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/bridge_i2c.c)
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/bridge_dev.c)
        add_definitions(-DSENSOR_DUAL_BRIDGE)
    endif()
    if (XC9080_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/hm2131Dual.c)
        add_definitions(-DSENSOR_XC9080_MIPI)
    endif()
endif()

if (COMP_ALL_BRIDGE_SENSORS STREQUAL "yes")
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge CAMSENSOR_SRC)
    add_definitions(-DBRIDGE_SENSOR_AR330_DUAL_DVP, -DBRIDGE_SENSOR_NT99142_DUAL_DVP, -DBRIDGE_SENSOR_SC3035_DUAL_DVP)
    add_definitions(-DBRIDGE_SENSOR_HM2131_DUAL_MIPI, -DBRIDGE_SENSOR_OV4689_DUAL_MIPI)
    add_definitions(-DBRIDGE_SENSOR_H65_DUAL_MIPI, -DBRIDGE_SENSOR_K02_DUAL_MIPI)
	add_definitions(-DBRIDGE_SENSOR_IMX291_DUAL_DVP)
else ()
    if (AR330_DUAL_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/ar330dualdvp.c)
        add_definitions(-DBRIDGE_SENSOR_AR330_DUAL_DVP)
    endif()
    if (NT99142_DUAL_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/nt99142dualdvp.c)
        add_definitions(-DBRIDGE_SENSOR_NT99142_DUAL_DVP)
    endif()
    if (SC3035_DUAL_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/sc3035dualdvp.c)
        add_definitions(-DBRIDGE_SENSOR_SC3035_DUAL_DVP)
    endif()
    if (HM2131_DUAL_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/hm2131dualmipi.c)
        add_definitions(-DBRIDGE_SENSOR_HM2131_DUAL_MIPI)
    endif()
    if (OV4689_DUAL_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/ov4689dualmipi.c)
        add_definitions(-DBRIDGE_SENSOR_OV4689_DUAL_MIPI)
    endif()
    if (H65_DUAL_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/hm2131dualmipi.c)
        add_definitions(-DBRIDGE_SENSOR_H65_DUAL_MIPI)
    endif()
    if (K02_DUAL_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/k02dualmipi.c)
        add_definitions(-DBRIDGE_SENSOR_K02_DUAL_MIPI)
    endif()
    if (IMX291_DUAL_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/imx291dualdvp.c)
        add_definitions(-DBRIDGE_SENSOR_IMX291_DUAL_DVP)
    endif()
endif()

if (COMP_ALL_BRIDGE STREQUAL "yes")
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge CAMSENSOR_SRC)
    add_definitions(-DBRIDGE_SX2_DVP, -DBRIDGE_STK3855_DVP)
    add_definitions(-DBRIDGE_XC9080_MIPI, -DBRIDGE_OV683_MIPI)
else ()
    if (BRIDGE_SX2_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/sx2_bridge.c)
        add_definitions(-DBRIDGE_SX2_DVP)
    endif()
    if (BRIDGE_STK3855_DVP STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/stk3855_bridge.c)
        add_definitions(-DBRIDGE_STK3855_DVP)
    endif()
    if (BRIDGE_XC9080_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/xc9080_bridge.c)
        add_definitions(-DBRIDGE_XC9080_MIPI)
    endif()
    if (BRIDGE_OV683_MIPI STREQUAL "yes")
        set(CAMSENSOR_SRC ${CAMSENSOR_SRC} ${CMAKE_CURRENT_SOURCE_DIR}/sensors/bridge/ov683_bridge.c)
        add_definitions(-DBRIDGE_OV683_MIPI)
    endif()
endif()

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ci_user CAMSENSOR_SRC)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} CAMSENSOR_SRC)
add_library(hlibcamsensor SHARED ${CAMSENSOR_SRC})
add_library(hlibcamsensor_static STATIC ${CAMSENSOR_SRC})
set_target_properties(hlibcamsensor_static PROPERTIES OUTPUT_NAME hlibcamsensor CLEAN_DIRECT_OUTPUT 1)

add_library(camsensor SHARED ${CAMSENSOR_SRC})
add_library(camsensor_static STATIC ${CAMSENSOR_SRC})
set_target_properties(camsensor_static PROPERTIES OUTPUT_NAME camsensor CLEAN_DIRECT_OUTPUT 1)
install(TARGETS hlibcamsensor DESTINATION lib)
install(TARGETS hlibcamsensor_static DESTINATION lib)
install(TARGETS camsensor DESTINATION lib)
install(TARGETS camsensor_static DESTINATION lib)
